# **************************************************************************** #
#                                                                              #
#                                                         :::      ::::::::    #
#    CMakeLists.txt                                     :+:      :+:    :+:    #
#                                                     +:+ +:+         +:+      #
#    By: paperrin <marvin@42.fr>                    +#+  +:+       +#+         #
#                                                 +#+#+#+#+#+   +#+            #
#    Created: 2017/12/04 23:06:12 by paperrin          #+#    #+#              #
#    Updated: 2017/12/16 22:57:26 by paperrin         ###   ########.fr        #
#                                                                              #
# **************************************************************************** #

cmake_minimum_required(VERSION 2.8)

project(libft)

include_directories(include)

SET(SRC_FILES
	src/ft_swap.c
	src/ft_memset.c
	src/ft_bzero.c
	src/ft_memcpy.c
	src/ft_memrevcpy.c
	src/ft_memccpy.c
	src/ft_memmove.c
	src/ft_memchr.c
	src/ft_memcmp.c
	src/ft_strlen.c
	src/ft_wstrlen.c
	src/ft_strdup.c
	src/ft_strndup.c
	src/ft_wstrdup.c
	src/ft_strcpy.c
	src/ft_wstrcpy.c
	src/ft_strncpy.c
	src/ft_strcat.c
	src/ft_strncat.c
	src/ft_strlcat.c
	src/ft_strchr.c
	src/ft_strchr_any.c
	src/ft_strrchr.c
	src/ft_strstr.c
	src/ft_strnstr.c
	src/ft_strcmp.c
	src/ft_strncmp.c
	src/ft_atoi.c
	src/ft_atoi_base.c
	src/ft_atoi_hex.c
	src/ft_atof.c
	src/ft_is_whitespace.c
	src/ft_isalpha.c
	src/ft_isdigit.c
	src/ft_isalnum.c
	src/ft_isascii.c
	src/ft_isprint.c
	src/ft_toupper.c
	src/ft_tolower.c
	src/ft_strupr.c
	src/ft_strlwr.c
	src/ft_memalloc.c
	src/ft_memdel.c
	src/ft_strnew.c
	src/ft_strdel.c
	src/ft_strclr.c
	src/ft_striter.c
	src/ft_striteri.c
	src/ft_strmap.c
	src/ft_strmapi.c
	src/ft_strequ.c
	src/ft_strnequ.c
	src/ft_strsub.c
	src/ft_strjoin.c
	src/ft_strnjoin.c
	src/ft_wstrjoin.c
	src/ft_wstrjoin_free.c
	src/ft_strtrim.c
	src/ft_strsplit.c
	src/ft_itoa.c
	src/ft_itoa_base.c
	src/ft_itoa_hex.c
	src/ft_itoa_oct.c
	src/ft_itoa_bin.c
	src/ft_itoa_dec.c
	src/ft_ftoa.c
	src/ft_putchar.c
	src/ft_putwchar.c
	src/ft_putnchar.c
	src/ft_putstr.c
	src/ft_putnstr.c
	src/ft_putwstr.c
	src/ft_putendl.c
	src/ft_putnbr.c
	src/ft_putchar_fd.c
	src/ft_putwchar_fd.c
	src/ft_putstr_fd.c
	src/ft_putnstr_fd.c
	src/ft_putwstr_fd.c
	src/ft_putendl_fd.c
	src/ft_putnbr_fd.c
	src/ft_tab_init.c
	src/ft_lstnew.c
	src/ft_lstdelone.c
	src/ft_lstdel.c
	src/ft_lstadd.c
	src/ft_lstiter.c
	src/ft_lstmap.c
	src/ft_lstfind.c
	src/ft_lstdelfind.c
	src/ft_lstat.c
	src/ft_lstpush.c
	src/ft_lstlen.c
	src/ft_get_next_line.c
	src/ft_sqrt.c
	src/ft_hash_string.c
	src/ft_wchar.c
	src/ft_color_rgb.c
	src/ft_color_rgb_to_int.c
	src/ft_color_rgb_op.c
	src/ft_color_rgba.c
	src/ft_color_hsv.c
	src/ft_color_hsl.c
	src/ft_color_hsv_to_rgb.c
	src/ft_clrf_rgb.c
	src/ft_clrf_rgb_op.c
	src/ft_clrf_rgb_scale.c
	src/ft_string.c
	src/ft_lerp.c
	src/math/ft_vec2i.c
	src/math/ft_vec2f.c
	src/math/ft_vec2d.c
	src/math/ft_vec3f.c
	src/math/ft_vec3f_op.c
	src/math/ft_vec3f_mag.c
	src/math/ft_vec3f_rot.c
	src/math/ft_vec3f_scale.c
	src/math/ft_vec3d.c
	src/math/ft_vec3d_op.c
	src/math/ft_vec3d_mag.c
	src/math/ft_vec3d_rot.c
	src/math/ft_vec3d_scale.c
	src/math/ft_vec3ld.c
	src/math/ft_matrix.c
	src/math/ft_matrix_multiply.c
	src/math/ft_matrix_translate.c
	src/math/ft_matrix_rot.c
	src/math/ft_matrix_scale.c
	src/math/ft_vec2f_add.c
	src/math/ft_vec2f_mag.c
	src/math/ft_vec2f_rot_scale.c
	src/printf/ft_printf_field.c
	src/printf/ft_printf_core.c
	src/printf/ft_printf_parse.c
	src/printf/ft_printf_parse_field.c
	src/printf/ft_printf_parse_number.c
	src/printf/ft_printf_parse_int.c
	src/printf/ft_printf_parse_char.c
	src/printf/ft_printf_parse_pointer.c
	src/printf/ft_printf_parse_string.c
	src/printf/ft_printf_parse_none.c
	src/printf/ft_printf_format_result.c
	src/printf/ft_printf_get_bracket_str.c
	src/printf/ft_sprintf.c
	src/printf/ft_snprintf.c
	src/printf/ft_asprintf.c
	src/printf/ft_dprintf.c
	src/printf/ft_printf.c
	src/array/ft_array_init.c
	src/array/ft_array_reserve.c
	src/array/ft_array_add.c
	src/array/ft_array_push_front.c
	src/array/ft_array_push_back.c
	src/array/ft_array_front.c
	src/array/ft_array_back.c
	src/array/ft_array_pop.c
	src/array/ft_array_pop_front.c
	src/array/ft_array_pop_back.c
	src/array/ft_array_free.c
	src/array/ft_array_sort.c
	src/vector/ft_vector.c
	src/vector/ft_vector_info.c
	src/vector/ft_vector_resize.c
	src/vector/ft_vector_insert.c
	src/vector/ft_vector_at.c
	src/vector/ft_vector_pop_at.c
	src/vector/ft_vector_erase.c
	src/vector/internal_ft_vector_range.c
	src/graph/ft_graph_create_edge_table.c
	src/graph/ft_graph_poly_fill.c
	src/graph/ft_graph_env_rect.c
	src/graph/ft_graph_env_aaline.c
	src/graph/ft_graph_transform.c
	src/graph/ft_graph_env_init.c
	src/graph/ft_graph_push.c
	src/graph/ft_graph_pop.c
	src/instream/ft_input_stream.c
	src/instream/ft_input_stream_file.c
	src/file/ft_file_get_size.c
	src/file/ft_file_to_string.c
)

add_library(ft ${SRC_FILES})
